# zaisei

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-production.yml
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile
compose/production/nginx/: Dockerfile
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
tests/uebusaito/: conftest.py
tests/uebusaito/users/: factories.py  test_forms.py  test_managers.py  test_urls.py  test_views.py
uebusaito/: conftest.py
uebusaito/contrib/flatpages/templates/flatpages/: home.html
uebusaito/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
uebusaito/home/: apps.py  urls.py  views.py
uebusaito/templates/: base.html
uebusaito/templates/account/: email.html  login.html  password_change.html  password_reset.html
uebusaito/users/: adapters.py  admin.py  apps.py  context_processors.py  forms.py  managers.py  models.py  urls.py  views.py
uebusaito/users/migrations/: 0001_initial.py
uebusaito/users/tests/: factories.py  test_admin.py  test_managers.py  test_models.py  test_views.py
zaisei/contrib/flatpages/migrations/: 0002_home_page.py
zaisei/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_alter_options_ordering_domain.py
zaisei/templates/: base.html
